refactor: misc modules antipattern fixes - god class breakups, serialVersionUID, slf4j, property centralization
- ComputationGraph → ComputationGraphRnn extraction
- MultiLayerNetwork → MultiLayerNetworkRnn + MultiLayerNetworkEvaluator extractions
- serialVersionUID across datavec, deeplearning4j-nn, NLP, UI model classes
- e.printStackTrace() → log.error() in NLP/codegen modules
- Deprecated boxed constructors → valueOf/autobox
- Serializable functional interfaces in datavec